<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL" Id="{80e92cfe-8789-4b17-a5ef-c2305278c53a}">
    <Declaration><![CDATA[VAR_GLOBAL
	//HOMS CODE
	g_psLogHost	: T_IPv4Addr := '172.21.32.9';
	gDefaultSubsystem : E_Subsystem := MOTION;
	gSystemFault	:	BOOL;
	gAmsNetIDEcatMaster1	AT %I* 	: AMSNETID;
	gFirstPass	:	 BOOL := TRUE;
	
	//MPS Outputs
	bXRT_M2_OUT AT %Q* : BOOL:= FALSE;
	bXRT_M2_IN AT %Q* : BOOL:= FALSE;
	
	//Safe-torque-off status
	gM1STO	:	BOOL;
	gM2STO	:	BOOL;
	gM3STO	:	BOOL;
	
	//Global encoder scale
	// For the HOMS, the encoders are all 1nm/cnt which makes things very easy
	gEncScale	:	LREAL := 1;
	
	//Overrides
	////////////////////////////////////
		(* Use at your own risk. These variables may induce unexpected state machine cases,
			and other undesirable effects. They are primarily for testing purposes. Do
		not use them for operations except in the most dire of situations, and with
		full knowledge and understanding of what they do. *)
		gBypassVirtualLimits	:	BOOL;
	
	//ModBus
	/////////////////////////////////////
	/// test mb_Input_Coils[0] with "modpoll -r 32769 -t 1 127.0.0.1" 
	mb_Input_Coils: ARRAY[0..255] OF BOOL;
	/// test mb_Output_Coils[0] with "modpoll -r 32769 -t 0 127.0.0.1" 
	mb_Output_Coils: ARRAY[0..255] OF BOOL;
	/// test mb_Input_Registers[0] with "modpoll -r 32769 -t 3 127.0.0.1" 
	mb_Input_Registers: ARRAY[0..255] OF WORD;
	/// test mb_Output_Registers[0] with "modpoll -r 32769 -t 4 127.0.0.1" 
	mb_Output_Registers: ARRAY[0..255] OF WORD;
	/// test mb_PLC_Memory[0] with "modpoll -r 12289 -t 4 127.0.0.1" 
	mb_PLC_Memory AT %MW0: ARRAY[0..1000] OF WORD;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>