<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Devices" Id="{cb7cf638-cc80-4f58-a532-470704faedf8}">
    <Declaration><![CDATA[VAR_GLOBAL
	//XRT M2
	HOMS2_Pitch	    : HOMS_PitchMechanismOld := (
		ReqPosLimHi := 960,
		ReqPosLimLo := -967,
		diEncPosLimHi := 10317713,
		diEncPosLimLo := 9329162
	);
	HOMS2_YGantry	: HOMS_Gantry;
	HOMS2_XGantry	: HOMS_Gantry;
	HOMS2_Bender	:	ST_HOMSStepper;
	
	//XRT M3
	HOMS3_Pitch	    : HOMS_PitchMechanismOld := (
		ReqPosLimHi := 246,
		ReqPosLimLo := -212,
		diEncPosLimHi := 9123828,
		diEncPosLimLo := 8888874
	);
	HOMS3_YGantry	: HOMS_Gantry;
	HOMS3_XGantry	: HOMS_Gantry;
	HOMS3_Bender	:	ST_HOMSStepper;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>