<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="p_ModbusRx_PLCMemory" Id="{0f58525f-8f65-498a-aa7e-c3ab518424d1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM p_ModbusRx_PLCMemory
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[MEMCPY(srcAddr:=ADR(mb_PLC_Memory[20]), destAddr:=ADR(HOMS2_XGantry.PAxis.rReqAbsolute), n:=SIZEOF(HOMS2_XGantry.PAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[22]), destAddr:=ADR(HOMS2_XGantry.PAxis.rTweak), n:=SIZEOF(HOMS2_XGantry.PAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[24]), destAddr:=ADR(HOMS2_XGantry.SAxis.rReqAbsolute), n:=SIZEOF(HOMS2_XGantry.SAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[26]), destAddr:=ADR(HOMS2_XGantry.SAxis.rTweak), n:=SIZEOF(HOMS2_XGantry.SAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[28]), destAddr:=ADR(HOMS2_YGantry.PAxis.rReqAbsolute), n:=SIZEOF(HOMS2_YGantry.PAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[30]), destAddr:=ADR(HOMS2_YGantry.PAxis.rTweak), n:=SIZEOF(HOMS2_YGantry.PAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[32]), destAddr:=ADR(HOMS2_YGantry.SAxis.rReqAbsolute), n:=SIZEOF(HOMS2_YGantry.SAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[34]), destAddr:=ADR(HOMS2_YGantry.SAxis.rTweak), n:=SIZEOF(HOMS2_YGantry.SAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[36]), destAddr:=ADR(HOMS2_Pitch.Axis.rReqAbsPos), n:=SIZEOF(HOMS2_Pitch.Axis.rReqAbsPos));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[38]), destAddr:=ADR(HOMS2_Pitch.Axis.rTweak), n:=SIZEOF(HOMS2_Pitch.Axis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[40]), destAddr:=ADR(HOMS3_XGantry.PAxis.rReqAbsolute), n:=SIZEOF(HOMS3_XGantry.PAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[42]), destAddr:=ADR(HOMS3_XGantry.PAxis.rTweak), n:=SIZEOF(HOMS3_XGantry.PAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[44]), destAddr:=ADR(HOMS3_XGantry.SAxis.rReqAbsolute), n:=SIZEOF(HOMS3_XGantry.SAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[46]), destAddr:=ADR(HOMS3_XGantry.SAxis.rTweak), n:=SIZEOF(HOMS3_XGantry.SAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[48]), destAddr:=ADR(HOMS3_YGantry.PAxis.rReqAbsolute), n:=SIZEOF(HOMS3_YGantry.PAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[50]), destAddr:=ADR(HOMS3_YGantry.PAxis.rTweak), n:=SIZEOF(HOMS3_YGantry.PAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[52]), destAddr:=ADR(HOMS3_YGantry.SAxis.rReqAbsolute), n:=SIZEOF(HOMS3_YGantry.SAxis.rReqAbsolute));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[54]), destAddr:=ADR(HOMS3_YGantry.SAxis.rTweak), n:=SIZEOF(HOMS3_YGantry.SAxis.rTweak));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[56]), destAddr:=ADR(HOMS3_Pitch.Axis.rReqAbsPos), n:=SIZEOF(HOMS3_Pitch.Axis.rReqAbsPos));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[58]), destAddr:=ADR(HOMS3_Pitch.Axis.rTweak), n:=SIZEOF(HOMS3_Pitch.Stepper.rTweak));

MEMCPY(srcAddr:=ADR(mb_PLC_Memory[64]), destAddr:=ADR(HOMS2_Pitch.Stepper.rStepperDmovRange), n:=SIZEOF(HOMS2_Pitch.Stepper.rStepperDmovRange));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[66]), destAddr:=ADR(HOMS2_Pitch.Piezo.rPiezoDmovRange), n:=SIZEOF(HOMS2_Pitch.Piezo.rPiezoDmovRange));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[68]), destAddr:=ADR(HOMS3_Pitch.Stepper.rStepperDmovRange), n:=SIZEOF(HOMS3_Pitch.Stepper.rStepperDmovRange));
MEMCPY(srcAddr:=ADR(mb_PLC_Memory[70]), destAddr:=ADR(HOMS3_Pitch.Piezo.rPiezoDmovRange), n:=SIZEOF(HOMS3_Pitch.Piezo.rPiezoDmovRange));

//MEMCPY(srcAddr:=ADR(mb_PLC_Memory[140]), destAddr:=ADR(HOMS1_Pitch.Piezo.rReqVoltage), n:=SIZEOF(HOMS1_Pitch.Piezo.rReqVoltage));
//MEMCPY(srcAddr:=ADR(mb_PLC_Memory[142]), destAddr:=ADR(HOMS2_Pitch.Piezo.rReqVoltage), n:=SIZEOF(HOMS2_Pitch.Piezo.rReqVoltage));]]></ST>
    </Implementation>
    <LineIds Name="p_ModbusRx_PLCMemory">
      <LineId Id="13" Count="19" />
      <LineId Id="35" Count="6" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>